# ai

./: .gitignore  AGENTS.md  README.md  agent-signup.md  agent.json  auth.md  llms.txt  managed-telecom-agents.md  package-lock.json  package.json
.well-known/: agent-access.json  agent-card.json  ai-capabilities.json  oauth-authorization-server  oauth-protected-resource  oauth-protected-resource-v2-mcp.json
agents/: crawler-accessibility-audit.md  start.md
ai/: capabilities.json  pricing.json
cli/: README.md  package-lock.json  package.json
guides/: agent-dx-gap-audit.md  ai-assistants.md  cursor-mcp-setup.md  edge-compute.md  evidence-handoff.md  external-coding-agents.md  microsoft-agent-framework.md  telnyx-native-vs-third-party-voice-orchestration.md  voice-agent-onboarding.md  voice-call-control.md  webhooks.md
intelliverse/: README.md
script/: build_and_run.sh
scripts/: check-skill-descriptions.sh  evidence-escalation.ts  evidence-handoff-cli.ts  evidence-handoff.ts  publish-secret-scan.ts  verify-live-agent-discovery.ts  verify-live-docs-mcp-apps.ts  verify-live-docs-mcp.ts
skills/: README.md
telnyx-hermes-sms/: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  SKILL.md  __init__.py  adapter.py  pyproject.toml
telnyx-hermes-sms/telnyx_hermes_sms/: .env.example  __init__.py  installer.py  plugin.yaml
telnyx-hermes-sms/tests/: _hermes.py  conftest.py  test_installer.py  test_telnyx_sms_live.py  test_telnyx_sms_plugin_loading.py  test_telnyx_sms_runtime.py  test_telnyx_sms_static.py
tests/: auth-discovery-surfaces.test.ts  (+10 more)
(+317 files in other folders)
