[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telnyx-hermes-sms"
version = "0.2.0"
description = "Telnyx SMS/MMS platform adapter contribution for Hermes Agent"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Telnyx AI FDE" }]
dependencies = [
  "aiohttp>=3.9",
]

[project.scripts]
telnyx-hermes-sms-install = "telnyx_hermes_sms.installer:main"

[project.optional-dependencies]
signature = ["PyNaCl>=1.5"]
test = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "PyYAML>=6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "live: requires live Telnyx credentials and sends a real SMS",
]

[tool.setuptools]
py-modules = ["adapter"]
packages = ["telnyx_hermes_sms"]
include-package-data = true

[tool.setuptools.package-data]
telnyx_hermes_sms = ["plugin.yaml", ".env.example"]
